--- a/templates/speaker_bio.html
+++ b/templates/speaker_bio.html
@@ -1,4 +1,22 @@
 {% extends 'base.html' %} {% block content %}
- <h1>asdffgasdfgqsd</h1>
+ 
+{% for item in speaker_info %}
+<br>
+
+<div class="row">   
+    <div class="col">
+    <h2>{{item.name}}</h2>
+    </div>
+</div>
+
+<div class="row">   
+    <div class="col">
+       
+        <p><img src="{{item.photo}}" style="float:left;margin-right:1.5em;">        
+        {{item.bio}}</p>
+    </div>
+    
+    {% endfor %}
+</div>
 
 {% endblock %}
