--- a/templates/speaker_bio.html
+++ b/templates/speaker_bio.html
@@ -11,9 +11,8 @@
 
 <div class="row">   
     <div class="col">
-       
-        <p><img src="{{item.photo}}" style="float:left;margin-right:1.5em;">        
-        {{item.bio}}</p>
+        <img src="{{item.photo}}" class="float-left mr-3">
+        {{item.bio}}
     </div>
     
     {% endfor %}
