Added Delete speaker functionality

--- a/templates/speaker_bio.html
+++ b/templates/speaker_bio.html
@@ -15,7 +15,10 @@
         {{item.bio}}
     </div>
     
-    {% endfor %}
 </div>
 
+<div class="row"> 
+        <a href="{{url_for('deletespeaker',speaker_id=item._id)}}" class="btn btn-primary">Delete Speaker</a>
+</div>
+{% endfor %}
 {% endblock %}
