--- a/templates/speaker_bio.html
+++ b/templates/speaker_bio.html
@@ -20,7 +20,7 @@
 <div class="row"> 
     <div class="col-2"></div>
     <div class="col-4">
-        <a href="#" class="btn btn-primary btn-lg btn-block m-5">Edit Speaker Details</a>
+        <a href="{{url_for('editspeaker',speaker_id=item._id)}}" class="btn btn-primary btn-lg btn-block m-5">Edit Speaker Details</a>
     </div>
     <div class="col-2">
         <a href="{{url_for('deletespeaker',speaker_id=item._id)}}" class="btn btn-danger btn-lg btn-block m-5">Delete Speaker</a>
