--- a/templates/speaker_bio.html
+++ b/templates/speaker_bio.html
@@ -18,14 +18,14 @@
 </div>
   
 <div class="row"> 
-    <div class="col-2"></div>
+    
     <div class="col-4">
         <a href="{{url_for('editspeaker',speaker_id=item._id)}}" class="btn btn-primary btn-lg btn-block m-5">Edit Speaker Details</a>
     </div>
 
     <div class="col-2">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-        Launch demo modal
+        <button type="button" class="btn btn-danger btn-lg btn-block m-5" data-toggle="modal" data-target="#exampleModal">
+        Delete Speaker
         </button>
 
         <!-- Modal -->
@@ -33,26 +33,19 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Are you sure you want to DELETE this Speaker?</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                ...
-            </div>
+           
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">No</button>
+                <a href="{{url_for('deletespeaker',speaker_id=item._id)}}" class="btn btn-secondary">Yes</a>
             </div>
             </div>
         </div>
         </div>
-    </div>
-
-
-    <div class="col-2">
-        <a href="{{url_for('deletespeaker',speaker_id=item._id)}}" onclick="return confirm('Are you sure?')" class="btn btn-danger btn-lg btn-block m-5">Delete Speaker</a>
     </div>
        
 </div>
