--- a/templates/speaker_bio.html
+++ b/templates/speaker_bio.html
@@ -19,17 +19,17 @@
   
 <div class="row"> 
     
-    <div class="col-4">
-        <a href="{{url_for('editspeaker',speaker_id=item._id)}}" class="btn btn-primary btn-lg btn-block m-5">Edit Speaker Details</a>
+    <div class="col-sm-6 col-lg-3">
+        <a href="{{url_for('editspeaker',speaker_id=item._id)}}" class="btn btn-primary btn-lg btn-block my-5">Edit Speaker Details</a>
     </div>
 
-    <div class="col-4">
-        <a  href="{{url_for('index')}}" class="btn btn-info btn-lg btn-block m-5" type="submit">Home  </a>
+    <div class="col-sm-6 col-lg-3">
+        <a  href="{{url_for('index')}}" class="btn btn-info btn-lg btn-block my-5" type="submit">Home  </a>
     </div>
 
 
-    <div class="col-2">
-        <button type="button" class="btn btn-danger btn-lg btn-block m-5" data-toggle="modal" data-target="#exampleModal">
+    <div class="col-sm-6 col-lg-2">
+        <button type="button" class="btn btn-danger btn-lg btn-block my-5" data-toggle="modal" data-target="#exampleModal">
         Delete Speaker
         </button>
 
